--- a/homepage.html
+++ b/homepage.html
@@ -10,12 +10,12 @@
     <body>
         <header>
             <div class="prima-nav">
-                <a href="#"  class="link-prima-nav">1</a>
-                <a href="#"  class="link-prima-nav">2</a>
-                <a href="#"  class="link-prima-nav">3</a>
-                <a href="#"  class="link-prima-nav">4</a>
-                <a href="#"  class="link-prima-nav">5</a>
-                <a href="#"  class="link-prima-nav">6</a>
+                <a href="#"  class="link-prima-nav">I nostri servizi</a>
+                <a href="#"  class="link-prima-nav">Ordini</a>
+                <a href="#"  class="link-prima-nav">Negozi</a>
+                <a href="#"  class="link-prima-nav">Supporto clienti</a>
+                <a href="#"  class="link-prima-nav">Contattaci</a>
+                <a href="#"  class="link-prima-nav">Info</a>
             </div>
             <div class="header-title">
                 <a href="homepage.html"><img src="#" alt="logo" class="img-toto-shop"></a>
